# pigeonvc

./: Cargo.toml  pigeonvc.db
src/: lib.rs
src/client/: ffi.rs  mod.rs
src/client-cli/: main.rs
src/protocol/: constants.rs  decode.rs  encode.rs  mod.rs  packet.rs
src/server/: events.rs  handlers.rs  mod.rs  model.rs  net.rs  routine.rs
src/server-cli/: main.rs
